--- a/i4-devops/.circleci/config.yml
+++ b/i4-devops/.circleci/config.yml
@@ -4,8 +4,8 @@ jobs:
     docker:
     - image: circleci/openjdk:11-jdk
     environment:
-      PROJECT_DOMAIN: newaustriancodingschool
-      PROJECT_NAME: devops
+      PROJECT_DOMAIN: erikabartvai
+      PROJECT_NAME: i4-devops
     working_directory: ~/repo
     steps:
     - checkout
