--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,7 +5,7 @@ jobs:
     - image: circleci/openjdk:11-jdk
     environment:
       PROJECT_DOMAIN: erikabartvai
-      PROJECT_NAME: i4-devops
+      PROJECT_NAME: erikadevops
     working_directory: ~/repo
     steps:
     - checkout
